--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Dashboard v2</title>
+    <title>Quiz Analytics</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -31,6 +31,15 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 30px;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .controls {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            align-items: center;
         }
 
         .stats-grid {
@@ -102,18 +111,63 @@
             color: #ef6c00;
         }
 
-        button#refreshBtn {
-            padding: 10px 20px;
-            background: var(--primary);
-            color: white;
+        button {
+            padding: 10px 15px;
             border: none;
-            border-radius: 8px;
+            border-radius: 6px;
             cursor: pointer;
             font-weight: 600;
+            color: white;
+            transition: opacity 0.2s;
         }
 
-        button#refreshBtn:hover {
+        button:hover {
             opacity: 0.9;
+        }
+
+        #filterBtn {
+            background: #2196F3;
+        }
+
+        #refreshBtn {
+            background: #4CAF50;
+        }
+
+        #exportBtn {
+            background: #FF9800;
+        }
+
+        #resetBtn {
+            background: #f44336;
+        }
+
+        input[type="date"] {
+            padding: 8px;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+        }
+
+        #answersModal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background: white;
+            width: 90%;
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            border-radius: 12px;
+            max-height: 80vh;
+            overflow-y: auto;
+            position: relative;
         }
 
         #debugLog {
@@ -145,8 +199,16 @@
         </script>
 
         <div class="header">
-            <h1>📊 Quiz Analytics V2</h1>
-            <button id="refreshBtn">Atualizar</button>
+            <h1>Quiz Analytics</h1>
+            <div class="controls">
+                <input type="date" id="dateStart" title="Data Inicial">
+                <input type="date" id="dateEnd" title="Data Final">
+
+                <button id="filterBtn">Filtrar</button>
+                <button id="refreshBtn">Atualizar</button>
+                <button id="exportBtn">📥 Exportar Leads</button>
+                <button id="resetBtn">🗑️ Resetar Tudo</button>
+            </div>
         </div>
 
         <div id="debugLog">Logs do sistema...</div>
@@ -179,7 +241,7 @@
                         <th>Step</th>
                         <th>Status</th>
                         <th>Infos</th>
-                        <th>ID</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody id="sessionsBody">
@@ -188,6 +250,19 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div id="answersModal">
+        <div class="modal-content">
+            <div style="display:flex; justify-content:space-between; margin-bottom:20px;">
+                <h3>Detalhes da Sessão</h3>
+                <button onclick="document.getElementById('answersModal').style.display='none'"
+                    style="border:none; background:none; font-size:24px; color:#333; padding:0;">&times;</button>
+            </div>
+            <pre id="modalContent"
+                style="background:#f5f5f5; padding:15px; border-radius:8px; overflow-x:auto; white-space: pre-wrap; font-size:12px;"></pre>
         </div>
     </div>
 
