--- a/dashboard.html
+++ b/dashboard.html
@@ -9,114 +9,50 @@
     <style>
         :root {
             --primary: #4CAF50;
+            --danger: #f44336;
             --dark: #333;
             --light: #f5f5f5;
+            --text-muted: #666;
         }
 
         body {
             font-family: 'Montserrat', sans-serif;
-            background: #f0f2f5;
+            background: #f8f9fa;
             margin: 0;
             padding: 20px;
             color: var(--dark);
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 800px;
             margin: 0 auto;
         }
 
+        /* Narrower for mobile-like feel */
+
+        /* Header & Controls */
         .header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 15px;
         }
 
         .controls {
             display: flex;
-            gap: 10px;
+            gap: 8px;
             flex-wrap: wrap;
-            align-items: center;
-        }
-
-        .stats-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-bottom: 30px;
-        }
-
-        .stat-card {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-            text-align: center;
-        }
-
-        .stat-value {
-            font-size: 32px;
-            font-weight: 700;
-            color: var(--primary);
-            margin: 10px 0;
-        }
-
-        .chart-container {
-            background: white;
-            padding: 25px;
-            border-radius: 16px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-            margin-bottom: 30px;
-            height: 400px;
-        }
-
-        .recent-table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .recent-table th,
-        .recent-table td {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #eee;
-        }
-
-        .recent-table th {
-            background: #f9f9f9;
-            font-weight: 600;
-        }
-
-        .status-badge {
-            padding: 4px 8px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
-        }
-
-        .status-complete {
-            background: #e8f5e9;
-            color: #2e7d32;
-        }
-
-        .status-progress {
-            background: #fff3e0;
-            color: #ef6c00;
         }
 
         button {
-            padding: 10px 15px;
+            padding: 8px 12px;
             border: none;
             border-radius: 6px;
             cursor: pointer;
             font-weight: 600;
+            font-size: 13px;
             color: white;
             transition: opacity 0.2s;
         }
@@ -142,9 +78,138 @@
         }
 
         input[type="date"] {
-            padding: 8px;
+            padding: 6px;
             border-radius: 6px;
-            border: 1px solid #ccc;
+            border: 1px solid #ddd;
+        }
+
+        /* KPI Cards */
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+
+        .stat-card {
+            background: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        }
+
+        .stat-title {
+            font-size: 12px;
+            color: var(--text-muted);
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .stat-value {
+            font-size: 28px;
+            font-weight: 700;
+            color: var(--dark);
+            margin-top: 5px;
+        }
+
+        /* Funnel List */
+        .card-container {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+
+        .section-title {
+            font-size: 18px;
+            font-weight: 700;
+            margin: 0 0 20px 0;
+            color: var(--dark);
+        }
+
+        .funnel-item {
+            margin-bottom: 25px;
+        }
+
+        .funnel-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            margin-bottom: 8px;
+        }
+
+        .funnel-label {
+            font-weight: 600;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .funnel-count {
+            font-weight: 700;
+            font-size: 16px;
+        }
+
+        .funnel-count small {
+            font-size: 12px;
+            font-weight: 400;
+            color: #888;
+            margin-left: 2px;
+        }
+
+        .progress-bg {
+            background: #eee;
+            height: 8px;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        .progress-fill {
+            background: var(--primary);
+            height: 100%;
+            border-radius: 4px;
+            width: 0%;
+            transition: width 0.5s ease;
+        }
+
+        .funnel-stats {
+            display: flex;
+            justify-content: flex-end;
+            gap: 15px;
+            margin-top: 6px;
+            font-size: 11px;
+            font-weight: 600;
+        }
+
+        .stat-green {
+            color: var(--primary);
+        }
+
+        .stat-red {
+            color: var(--danger);
+        }
+
+        /* Tables & Modals */
+        .recent-table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 13px;
+            margin-top: 10px;
+        }
+
+        .recent-table th,
+        .recent-table td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #eee;
+        }
+
+        .recent-table th {
+            color: #888;
+            font-weight: 500;
         }
 
         #answersModal {
@@ -161,7 +226,7 @@
         .modal-content {
             background: white;
             width: 90%;
-            max-width: 600px;
+            max-width: 500px;
             margin: 50px auto;
             padding: 20px;
             border-radius: 12px;
@@ -174,13 +239,10 @@
             display: none;
             background: #222;
             color: #00ff00;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            font-family: monospace;
-            font-size: 12px;
-            max-height: 200px;
-            overflow-y: auto;
+            padding: 10px;
+            font-size: 10px;
+            margin-bottom: 10px;
+            border-radius: 4px;
         }
     </style>
 </head>
@@ -199,75 +261,77 @@
         </script>
 
         <div class="header">
-            <h1>Quiz Analytics</h1>
+            <h2 style="margin:0;">Quiz Analytics</h2>
             <div class="controls">
-                <input type="date" id="dateStart" title="Data Inicial">
-                <input type="date" id="dateEnd" title="Data Final">
-
+                <input type="date" id="dateStart">
+                <input type="date" id="dateEnd">
                 <button id="filterBtn">Filtrar</button>
                 <button id="refreshBtn">Atualizar</button>
-                <button id="exportBtn">📥 Exportar Leads</button>
-                <button id="resetBtn">🗑️ Resetar Tudo</button>
+                <button id="exportBtn">Exportar</button>
+                <button id="resetBtn">Reset</button>
             </div>
         </div>
 
-        <div id="debugLog">Logs do sistema...</div>
+        <div id="debugLog">Logs...</div>
 
+        <!-- Top KPIs -->
         <div class="stats-grid">
             <div class="stat-card">
-                <h3>Total</h3>
-                <div class="stat-value" id="totalSessions">-</div>
+                <div class="stat-title">Total Visitantes</div>
+                <div class="stat-value" id="totalVisitors">0</div>
             </div>
             <div class="stat-card">
-                <h3>Completos</h3>
-                <div class="stat-value" id="totalCompleted">-</div>
+                <div class="stat-title">Finalizaram Quiz</div>
+                <div class="stat-value" id="leadsCaptured">0</div>
             </div>
             <div class="stat-card">
-                <h3>Conversão</h3>
-                <div class="stat-value" id="conversionRate">-%</div>
+                <div class="stat-title">Taxa de Conversão</div>
+                <div class="stat-value" id="overallConversion">0%</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-title">Clicaram Checkout</div>
+                <div class="stat-value" id="salesClicks">0</div>
             </div>
         </div>
 
-        <div class="chart-container">
-            <canvas id="funnelChart"></canvas>
+        <!-- Funnel List UI -->
+        <div class="card-container">
+            <h3 class="section-title">Análise Detalhada do Funil</h3>
+            <div id="funnelList">
+                <div style="text-align:center; padding:20px; color:#888;">Carregando funil...</div>
+            </div>
         </div>
 
-        <h2>Sessões Recentes</h2>
-        <div style="overflow-x: auto;">
-            <table class="recent-table">
-                <thead>
-                    <tr>
-                        <th>Data</th>
-                        <th>Step</th>
-                        <th>Status</th>
-                        <th>Infos</th>
-                        <th>Checkout?</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody id="sessionsBody">
-                    <tr>
-                        <td colspan="6" style="text-align:center">Aguardando script...</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="card-container">
+            <h3 class="section-title">Últimas Sessões</h3>
+            <div style="overflow-x: auto;">
+                <table class="recent-table">
+                    <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Status</th>
+                            <th>Checkout</th>
+                            <th>Ação</th>
+                        </tr>
+                    </thead>
+                    <tbody id="sessionsBody">
+                        <tr>
+                            <td colspan="4">...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal for Answers -->
     <div id="answersModal">
         <div class="modal-content">
-            <div style="display:flex; justify-content:space-between; margin-bottom:20px;">
-                <h3>Detalhes da Sessão</h3>
-                <button onclick="document.getElementById('answersModal').style.display='none'"
-                    style="border:none; background:none; font-size:24px; color:#333; padding:0;">&times;</button>
-            </div>
-            <!-- Div container for HTML formatted content -->
+            <!-- Populated by JS -->
             <div id="modalContent"></div>
         </div>
     </div>
 
-    <!-- MAIN MODULE SCRIPT -->
     <script type="module" src="./dashboard.js"></script>
 </body>
 
