feat: enable multi-select for body focus and dietary restrictions steps

--- a/index.html
+++ b/index.html
@@ -175,19 +175,20 @@
         </section>
 
         <!-- Etapa 7: Áreas do corpo -->
-        <section class="quiz-step" data-step="7">
+        <section class="quiz-step" data-step="7" data-multiple="true">
             <h1 class="quiz-title">¿En qué áreas del cuerpo quieres enfocarte?</h1>
+            <p class="quiz-subtitle">Selecciona todas las que apliquen</p>
             <div class="options-list">
                 <button class="option-card" data-value="barriga">
-                    <img src="https://i.ibb.co/KgnsXDf/1.webp" alt="Abdomen" class="option-outcome-img">
-                    <span>Abdomen</span>
+                    <img src="https://i.ibb.co/6RM1Vz0Q/1.webp" alt="Barriga" class="option-outcome-img">
+                    <span>Barriga</span>
                 </button>
-                <button class="option-card" data-value="bunda">
-                    <img src="https://i.ibb.co/0SjJLgS/2.webp" alt="Glúteos" class="option-outcome-img">
-                    <span>Glúteos</span>
+                <button class="option-card" data-value="bracos">
+                    <img src="https://i.ibb.co/210h0G6B/2.webp" alt="Brazos" class="option-outcome-img">
+                    <span>Brazos</span>
                 </button>
                 <button class="option-card" data-value="peito">
-                    <img src="https://i.ibb.co/tPK7s2SB/3.webp" alt="Pecho" class="option-outcome-img">
+                    <img src="https://i.ibb.co/Qj8g6Kmn/3.webp" alt="Pecho" class="option-outcome-img">
                     <span>Pecho</span>
                 </button>
                 <button class="option-card" data-value="pernas">
@@ -195,6 +196,7 @@
                     <span>Piernas</span>
                 </button>
             </div>
+            <button class="continue-btn" disabled style="margin-top:20px; width:100%;">Continuar</button>
         </section>
 
         <!-- Etapa 8: Tipo corporal -->
@@ -412,8 +414,9 @@
         </section>
 
         <!-- Etapa 16: Restrições alimentares -->
-        <section class="quiz-step" data-step="16">
+        <section class="quiz-step" data-step="16" data-multiple="true">
             <h1 class="quiz-title">¿Tienes alguna restricción alimentaria?</h1>
+            <p class="quiz-subtitle">Selecciona todas las que apliquen</p>
             <div class="options-list">
                 <button class="option-card" data-value="sem-lactose">
                     <span>Sin lactosa</span>
@@ -435,6 +438,7 @@
                     <span>Ninguna de las anteriores</span>
                 </button>
             </div>
+            <button class="continue-btn" disabled style="margin-top:20px; width:100%;">Continuar</button>
         </section>
 
         <!-- Etapa 17: Comidas favoritas (Multi-select) -->
