style: fix font size step 3-4 and add lazy loading

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preload" as="image" href="https://i.ibb.co/jvy7XmSL/1.webp">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
@@ -91,27 +90,27 @@
             <h1 class="quiz-title">Selecciona tu talla de ropa actual</h1>
             <div class="options-grid clothing-size-grid">
                 <button class="option-card grid-card" data-value="PP">
-                    <img src="https://i.ibb.co/Tq2ChLzV/2.webp" alt="XS" class="grid-img">
+                    <img src="https://i.ibb.co/Tq2ChLzV/2.webp" alt="XS" class="grid-img" loading="lazy">
                     <span>XS</span>
                 </button>
                 <button class="option-card grid-card" data-value="P">
-                    <img src="https://i.ibb.co/x8ghqW77/1.webp" alt="S" class="grid-img">
+                    <img src="https://i.ibb.co/x8ghqW77/1.webp" alt="S" class="grid-img" loading="lazy">
                     <span>S</span>
                 </button>
                 <button class="option-card grid-card" data-value="M">
-                    <img src="https://i.ibb.co/VWLd7ZZN/3.webp" alt="M" class="grid-img">
+                    <img src="https://i.ibb.co/VWLd7ZZN/3.webp" alt="M" class="grid-img" loading="lazy">
                     <span>M</span>
                 </button>
                 <button class="option-card grid-card" data-value="G">
-                    <img src="https://i.ibb.co/bMxfmRxh/4.webp" alt="L" class="grid-img">
+                    <img src="https://i.ibb.co/bMxfmRxh/4.webp" alt="L" class="grid-img" loading="lazy">
                     <span>L</span>
                 </button>
                 <button class="option-card grid-card" data-value="GG">
-                    <img src="https://i.ibb.co/84KRKdnx/5.webp" alt="XL" class="grid-img">
+                    <img src="https://i.ibb.co/84KRKdnx/5.webp" alt="XL" class="grid-img" loading="lazy">
                     <span>XL</span>
                 </button>
                 <button class="option-card grid-card" data-value="XGG">
-                    <img src="https://i.ibb.co/hvdx3qY/6.webp" alt="XXL" class="grid-img">
+                    <img src="https://i.ibb.co/hvdx3qY/6.webp" alt="XXL" class="grid-img" loading="lazy">
                     <span>XXL</span>
                 </button>
             </div>
@@ -122,27 +121,27 @@
             <h1 class="quiz-title">Elige la talla que quieres usar</h1>
             <div class="options-grid clothing-size-grid">
                 <button class="option-card grid-card" data-value="PP">
-                    <img src="https://i.ibb.co/Tq2ChLzV/2.webp" alt="XS" class="grid-img">
+                    <img src="https://i.ibb.co/Tq2ChLzV/2.webp" alt="XS" class="grid-img" loading="lazy">
                     <span>XS</span>
                 </button>
                 <button class="option-card grid-card" data-value="P">
-                    <img src="https://i.ibb.co/x8ghqW77/1.webp" alt="S" class="grid-img">
+                    <img src="https://i.ibb.co/x8ghqW77/1.webp" alt="S" class="grid-img" loading="lazy">
                     <span>S</span>
                 </button>
                 <button class="option-card grid-card" data-value="M">
-                    <img src="https://i.ibb.co/VWLd7ZZN/3.webp" alt="M" class="grid-img">
+                    <img src="https://i.ibb.co/VWLd7ZZN/3.webp" alt="M" class="grid-img" loading="lazy">
                     <span>M</span>
                 </button>
                 <button class="option-card grid-card" data-value="G">
-                    <img src="https://i.ibb.co/bMxfmRxh/4.webp" alt="L" class="grid-img">
+                    <img src="https://i.ibb.co/bMxfmRxh/4.webp" alt="L" class="grid-img" loading="lazy">
                     <span>L</span>
                 </button>
                 <button class="option-card grid-card" data-value="GG">
-                    <img src="https://i.ibb.co/84KRKdnx/5.webp" alt="XL" class="grid-img">
+                    <img src="https://i.ibb.co/84KRKdnx/5.webp" alt="XL" class="grid-img" loading="lazy">
                     <span>XL</span>
                 </button>
                 <button class="option-card grid-card" data-value="XGG">
-                    <img src="https://i.ibb.co/hvdx3qY/6.webp" alt="XXL" class="grid-img">
+                    <img src="https://i.ibb.co/hvdx3qY/6.webp" alt="XXL" class="grid-img" loading="lazy">
                     <span>XXL</span>
                 </button>
             </div>
