fix(ui): improve fade animation and fix broken step 7 images

--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
             <p class="quiz-subtitle">Selecciona todas las que apliquen</p>
             <div class="options-list">
                 <button class="option-card" data-value="barriga">
-                    <img src="https://i.ibb.co/6RM1Vz0Q/1.webp" alt="Barriga" class="option-outcome-img">
+                    <img src="https://img.icons8.com/color/96/fat-man.png" alt="Barriga" class="option-outcome-img">
                     <span>Barriga</span>
                 </button>
                 <button class="option-card" data-value="bracos">
-                    <img src="https://i.ibb.co/210h0G6B/2.webp" alt="Brazos" class="option-outcome-img">
+                    <img src="https://img.icons8.com/color/96/biceps.png" alt="Brazos" class="option-outcome-img">
                     <span>Brazos</span>
                 </button>
                 <button class="option-card" data-value="peito">
-                    <img src="https://i.ibb.co/Qj8g6Kmn/3.webp" alt="Pecho" class="option-outcome-img">
+                    <img src="https://img.icons8.com/color/96/chest.png" alt="Pecho" class="option-outcome-img">
                     <span>Pecho</span>
                 </button>
                 <button class="option-card" data-value="pernas">
-                    <img src="https://i.ibb.co/Lz0j23MM/4.webp" alt="Piernas" class="option-outcome-img">
+                    <img src="https://img.icons8.com/color/96/leg.png" alt="Piernas" class="option-outcome-img">
                     <span>Piernas</span>
                 </button>
             </div>
