--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -29,13 +29,16 @@
         fbq('init', '1232580981668009');
         fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-            src="https://www.facebook.com/tr?id=1232580981668009&ev=PageView&noscript=1" /></noscript>
+
     <!-- End Meta Pixel Code -->
 
 </head>
 
 <body>
+    <!-- Meta Pixel NoScript -->
+    <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=1232580981668009&ev=PageView&noscript=1" /></noscript>
+    <!-- End Meta Pixel NoScript -->
     <!-- Header -->
     <header class="header">
         <button class="back-btn" id="backBtn" aria-label="Volver">
