feat: add unique metrics tracking to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -296,6 +296,7 @@
         <div id="debugLog">Logs...</div>
 
         <!-- Top KPIs -->
+        <h3 class="section-title" style="margin-bottom:10px; font-size:14px; color:#666;">Métricas Totais (Sessões)</h3>
         <div class="stats-grid">
             <div class="stat-card">
                 <div class="stat-title">Total Visitantes</div>
@@ -312,6 +313,28 @@
             <div class="stat-card">
                 <div class="stat-title">Clicaram Checkout</div>
                 <div class="stat-value" id="salesClicks">0</div>
+            </div>
+        </div>
+
+        <!-- Unique KPIs -->
+        <h3 class="section-title" style="margin-bottom:10px; font-size:14px; color:#666; margin-top:20px;">Métricas
+            Únicas (Visitantes)</h3>
+        <div class="stats-grid" style="margin-bottom:30px;">
+            <div class="stat-card" style="border-left: 4px solid #2196F3;">
+                <div class="stat-title">Visitantes Únicos</div>
+                <div class="stat-value" id="uTotalVisitors">0</div>
+            </div>
+            <div class="stat-card" style="border-left: 4px solid #4CAF50;">
+                <div class="stat-title">Finalizações Únicas</div>
+                <div class="stat-value" id="uLeadsCaptured">0</div>
+            </div>
+            <div class="stat-card" style="border-left: 4px solid #9C27B0;">
+                <div class="stat-title">Conversão Única</div>
+                <div class="stat-value" id="uOverallConversion">0%</div>
+            </div>
+            <div class="stat-card" style="border-left: 4px solid #FF9800;">
+                <div class="stat-title">Checkout Único</div>
+                <div class="stat-value" id="uSalesClicks">0</div>
             </div>
         </div>
 
