feat: Add pre-quiz landing page with nutritionist image
- Added Step 0 as landing page before quiz
- Urgent red banner: URGENTE, NUTRICIONISTA REVELA
- Eye-catching headline with green highlights
- Nutritionist image with before/after showcase
- CTA text and 3D green button
- Responsive mobile design
- Updated quizState to start at step 0, totalSteps now 43

--- a/index.html
+++ b/index.html
@@ -58,8 +58,39 @@
     <!-- Main Quiz Container -->
     <main class="quiz-container">
 
+        <!-- Etapa 0: Landing Page / Pre-Quiz -->
+        <section class="quiz-step active" data-step="0">
+            <!-- Urgent Banner -->
+            <div class="urgent-banner">
+                URGENTE, NUTRICIONISTA REVELA:
+            </div>
+
+            <!-- Main Headline -->
+            <h1 class="landing-title">
+                ¡PIERDE HASTA <span class="highlight-green">10 KG EN 1 MES</span> CON ESTA RUTINA DE <span
+                    class="highlight-green">AYUNO BARIÁTRICO!</span>
+            </h1>
+
+            <!-- Nutritionist Image -->
+            <div class="landing-image-container">
+                <img src="https://i.ibb.co/7Jrw1LmK/13f14563-8e78-4a07-870e-f1a67325c170.jpg" alt="Nutricionista"
+                    class="landing-nutritionist-img">
+            </div>
+
+            <!-- CTA Text -->
+            <p class="landing-cta-text">
+                HAZ LA EVALUACIÓN DE 1 MINUTO Y OBTÉN TU PROTOCOLO DE <span class="highlight-green">AYUNO
+                    BARIÁTRICO</span> PERSONALIZADO 👇
+            </p>
+
+            <!-- CTA Button -->
+            <button class="landing-cta-btn continue-btn" data-next-step="1">
+                ¡CREAR MI PROTOCOLO!
+            </button>
+        </section>
+
         <!-- Etapa 1: Edad -->
-        <section class="quiz-step active" data-step="1">
+        <section class="quiz-step" data-step="1">
             <h1 class="quiz-title">Ayuno Intermitente</h1>
             <p class="quiz-subtitle">Según tu edad</p>
             <div class="options-list">
