fix: Fix button pulse animation and update text to 'ayuno personalizado'
- Fixed pulse animation by moving it inside .landing-cta-btn definition
- Changed all 'AYUNO BARIÁTRICO' to 'AYUNO PERSONALIZADO'
- Button now properly pulses every 2 seconds
- Removed hover translateY that conflicted with pulse

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <!-- Main Headline -->
             <h1 class="landing-title">
                 ¡PIERDE HASTA <span class="highlight-green">10 KG EN 1 MES</span> CON ESTA RUTINA DE <span
-                    class="highlight-green">AYUNO BARIÁTRICO!</span>
+                    class="highlight-green">AYUNO PERSONALIZADO!</span>
             </h1>
 
             <!-- Nutritionist Image -->
@@ -80,7 +80,7 @@
             <!-- CTA Text -->
             <p class="landing-cta-text">
                 HAZ LA EVALUACIÓN DE 1 MINUTO Y OBTÉN TU PROTOCOLO DE <span class="highlight-green">AYUNO
-                    BARIÁTRICO</span> PERSONALIZADO 👇
+                    PERSONALIZADO</span> 👇
             </p>
 
             <!-- CTA Button -->
